added toggle of labels functionality to GUI

--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,22 @@
                          id="layout3-btn" onclick="doLayout3View()"/>
                 </div>
                 <div>
+                    <img src="icons/toggle1_on.png" alt="ToggleLabelsOn" width='24'
+                         id="labels-on-btn" onclick="toggleShowLabels()"/>
+                </div>
+                <div>
+                    <img src="icons/toggle1_off.png" alt="ToggleLabelsOff" width='24'
+                         id="labels-off-btn" onclick="toggleShowLabels()"/>
+                </div>
+                <div>
+                    <img src="icons/toggle1_on.png" alt="ToggleEdgeLabelsOn" width='24'
+                         id="edge-labels-on-btn" onclick="toggleShowEdgeLabels()"/>
+                </div>
+                <div>
+                    <img src="icons/toggle1_off.png" alt="ToggleEdgeLabelsOff" width='24'
+                         id="edge-labels-off-btn" onclick="toggleShowEdgeLabels()"/>
+                </div>
+                <div>
                     <img src="icons/mouse_cursor_s.png" alt="SelectSimilar" width='24'
                          id="select-nodes-btn" onclick="doSelectNodes()"/>
                 </div>
