added grouping of results on the server side and some enhancement to GUI

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
         <div id="appContainer">
             <div id="selection-pane">
                 <select id="qOption" onchange=processSelection()>
-                    <option value="Q01">Get Block</option>
+                    <option value="Q01">Large Trx</option>
                     <option value="Q02">Block to Address</option>
                     <option value="Q03">Satoshi N. Analysis</option>
                     <option value="Q04">Wikileaks 1</option>
