--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,8 @@
         <div id="appContainer">
             <div id="selection-pane">
                 <select id="qOption" onchange=processSelection()>
-                    <option value="Q01">Large Trx</option>
+                    <option value="Q00">Interesting</option>
+                    <option value="Q01">Large Transaction</option>
                     <option value="Q02">Block to Address</option>
                     <option value="Q03">Satoshi N. Analysis</option>
                     <option value="Q04">Wikileaks 1</option>
@@ -152,13 +153,14 @@
                     <option value="Q06">Many to One</option>
                     <option value='Q07'>Not Generated 1</option>
                     <option value='Q08'>Not Generated 2</option>
+                    <option value='Q08'>Graph shapes</option>
                 </select>
                 <input type="button" value="Run" onclick="doQuery()"/>
             </div>
             <textarea id="qbox" cols="100" rows="3"></textarea>
             <div id="max-results-pane">
                 <label>Max Results
-                <input type="number" id="max-results" value="50">
+                <input type="number" id="max-results" value="100">
                 </label>
             </div>
         </div>
@@ -296,21 +298,7 @@
                 -->
               </div>
               <div id="options-btn-set2">
-                <div style="cursor: pointer">
-                  <div class="tooltip">
-                    <img src="icons/time.png" alt="TimeViewer" width='24'
-                         id="reset-view-btn" onclick="toggleTimeControl()"/>
-                    <span class="tooltiptext">Time viewer</span>
-                  </div>
-                  <!-- Will toggle this control based on the clicked icon -->
-                  <div id="time-control" style="visibility: hidden">
-                     <!--<span>Time: </span><br>-->
-                     <span id="min-time-value" style="font-size: 60%">2009-01-03 18:15:05</span><br>
-                     <input id="time-span" class="time-span-range" type="range" 
-                            min="0" max="1000" value="0">
-                     <span id="max-time-value" style="font-size: 60%">2017-09-15 00:16:05</span><br>
-                   </div>
-                </div>
+
                  <div>
                   <div class="tooltip">
                     <img src="icons/documents1.png" alt="Documents" width='24' style="cursor:pointer"
@@ -325,6 +313,21 @@
                     <span class="tooltiptext">full screen</span>
                   </div>
                 </div>
+                <div style="cursor: pointer">
+                  <div class="tooltip">
+                    <img src="icons/time.png" alt="TimeViewer" width='24'
+                         id="reset-view-btn" onclick="toggleTimeControl()"/>
+                    <span class="tooltiptext">Time viewer</span>
+                  </div>
+                  <!-- Will toggle this control based on the clicked icon -->
+                  <div id="time-control" style="visibility: hidden">
+                     <!--<span>Time: </span><br>-->
+                     <span id="min-time-value" style="font-size: 60%">2009-01-03 18:15:05</span><br>
+                     <input id="time-span" class="time-span-range" type="range" 
+                            min="0" max="1000" value="0">
+                     <span id="max-time-value" style="font-size: 60%">2017-09-15 00:16:05</span><br>
+                   </div>
+                </div>                
               </div>
             </div>
             <div id="status-pane" class="noselect">
