add getNeighbors and other time scale and query enhancements

--- a/public/index.html
+++ b/public/index.html
@@ -153,9 +153,10 @@
                     <option value="Q06">Many to One</option>
                     <option value='Q07'>Not Generated 1</option>
                     <option value='Q08'>Not Generated 2</option>
-                    <option value='Q08'>Graph shapes</option>
+                    <option value='Q09'>Graph shapes</option>
+                    <option value="Q10">Billionaire</option>
                 </select>
-                <input type="button" value="Run" onclick="doQuery()"/>
+                <input type="button" value="Run" onclick="execQuery()"/>
             </div>
             <textarea id="qbox" cols="100" rows="3"></textarea>
             <div id="max-results-pane">
