updated model picture and remove _mintTime from the pattern

--- a/public/index.html
+++ b/public/index.html
@@ -148,13 +148,13 @@
                     <option value="Q01">Large Transaction</option>
                     <option value="Q02">Block to Address</option>
                     <option value="Q03">Satoshi N. Analysis</option>
-                    <option value="Q04">Wikileaks 1</option>
+                    <option value="Q04">Wikileaks Generated</option>
                     <option value="Q05">One to Many</option>
                     <option value="Q06">Many to One</option>
                     <option value='Q07'>Not Generated 1</option>
                     <option value='Q08'>Not Generated 2</option>
                     <option value='Q09'>Graph shapes</option>
-                    <option value="Q10">Billionaire</option>
+                    <option value="Q10">Active Address</option>
                 </select>
                 <input type="button" value="Run" onclick="execQuery()"/>
             </div>
